--- a/EntornoCliente/TAREAPRESENCIAL/index.html
+++ b/EntornoCliente/TAREAPRESENCIAL/index.html
@@ -1,12 +1,74 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="script.js"></script>
-</head>
-<body>
-    <button onclick=abrir()>abre una ventana</button>
-</body>
+<!--
+Ejemplo Apertura y Cierre de Ventanas.
+-->
+<html>
+    <head>
+        <title>Apertura y Cierre de Ventanas</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script> 
+            var nuevaVentana = window;
+            var ventanaCreada;
+ 
+            function  inicializar()
+            {
+                document.getElementById("crear-ventana").onclick=crearNueva;
+                document.getElementById("cerrar-ventana").onclick=cerrarNueva;
+                ventanaCreada=false;
+            }
+ 
+            function  crearNueva()
+            {
+                if  (ventanaCreada==false)
+                {         
+                    nuevaVentana  =  window.open("https://www.iesaguadulce.es/centro/index.php/","","height=400,width=800");
+                    ventanaCreada=true;
+                }
+                else
+                    alert("Ventana ya creada!!!");
+            }
+ 
+            function  cerrarNueva()
+            {
+                if  (ventanaCreada==true)
+                {
+                    nuevaVentana.close();
+                    ventanaCreada=false;
+                }
+                else
+                    alert("Ventana aun no creada!!!");
+            }
+
+            function verificar(){
+                if (nuevaVentana.closed) {
+                    alert("La ventana ha sido cerrada")
+                }else{
+                    alert("La ventana esta abierta")
+                }
+            }
+
+            function dimensiones(){
+                var ancho = parseInt(prompt("ancho: "))
+                var alto = parseInt(prompt("alto: "))
+
+                while (isNaN(ancho) || isNaN(alto)) {
+                    alert("error al ingresar datos")
+                    ancho = parseInt(prompt("ancho: "))
+                    alto = parseInt(prompt("alto: "))
+                }
+
+                if (ancho != 0 && alto != 0) {
+                    nuevaVentana.resizeTo(ancho, alto)
+                }
+            }
+        </script>
+    </head>
+    <body onLoad="inicializar()">
+        <div>Apertura y Cierre de Ventanas</div>
+        <button type="button" id="crear-ventana">Crear una sola Ventana nueva</button>
+        <button type="button" id="cerrar-ventana">Cerrar Nueva Ventana</button>     
+        <button type="button" id="verificar-ventana" onclick=verificar()>Verificar Nueva Ventana</button>     
+        <button type="button" id="redimensionar-ventana" onclick=dimensiones()>Modificar Nueva Ventana</button>     
+    </body>
 </html>
