--- a/EntornoCliente/relacion3/index.html
+++ b/EntornoCliente/relacion3/index.html
@@ -27,6 +27,8 @@
     <div>
         <button onclick='redirigir("ejercicio1.html")'>ejercicio1</button>
         <button onclick='redirigir("ejercicio2.html")'>ejercicio2</button>
+        <button onclick='redirigir("ejercicio3.html")'>ejercicio3</button>
+        <button onclick='redirigir("ejercicio4.html")'>ejercicio4</button>
     </div>
     <div id="ej">
         <iframe></iframe>
