--- a/EntornoCliente/relacion3/index.html
+++ b/EntornoCliente/relacion3/index.html
@@ -8,11 +8,10 @@
         body{
             display: flex;
             justify-content: center;
-            
+            align-items: center;
+            flex-direction: column;
         }
-        #ej{
-            margin-top: 20%;
-        }
+
         iframe{
             border: 10px solid black;
         }
@@ -29,6 +28,7 @@
         <button onclick='redirigir("ejercicio2.html")'>ejercicio2</button>
         <button onclick='redirigir("ejercicio3.html")'>ejercicio3</button>
         <button onclick='redirigir("ejercicio4.html")'>ejercicio4</button>
+        <button onclick='redirigir("ejercicio5.html")'>ejercicio5</button>
     </div>
     <div id="ej">
         <iframe></iframe>
