--- a/DiseInter/tarea5/index.html
+++ b/DiseInter/tarea5/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -60,7 +60,7 @@
             <div id="nuevos">
                 <p>Top repositories</p>
                 <button><i class="bi bi-bookmark"></i> New</button>
-                <input type="text" placeholder="Find repositoriy...">
+                <input type="text" placeholder="Find repositoriy..." style="width: 70%;">
                 <ul>
                     <li><i class="bi bi-person-circle"></i> Lorem ipsum dolor sit amet.</li>
                     <li><i class="bi bi-person-circle"></i> Lorem ipsum dolor sit amet.</li>
@@ -77,8 +77,62 @@
         </aside>
         <main>
             <h3>Home</h3>
+            <section>
+                <p>trending repositories</p>
+                <div>
+                    <i class="bi bi-person-circle">Lorem, ipsum dolor.</i>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci rerum hic modi. Tenetur eos
+                        nulla consectetur, nesciunt, dolorum assumenda cupiditate ab expedita consequuntur animi quae
+                        eum, nostrum quibusdam. Eius, magnam.</p>
+                </div>
+                <div>
+                    <i class="bi bi-person-circle">Lorem, ipsum dolor.</i>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci rerum hic modi. Tenetur eos
+                        nulla consectetur, nesciunt, dolorum assumenda cupiditate ab expedita consequuntur animi quae
+                        eum, nostrum quibusdam. Eius, magnam.</p>
+                </div>
+            </section>
         </main>
+        <aside id="derecha">
+            <div class="contenedor">
+                <img src="img/banner.png" alt="">
+            </div>
+            <div class="bordeado contenedor">
+                <h3>Latest changes</h3>
+                <ul id="cambios">
+                    <li>Lorem ipsum dolor sit amet consectetur.</li>
+                    <li>Lorem ipsum dolor sit amet consectetur.</li>
+                    <li>Lorem ipsum dolor sit amet consectetur.</li>
+                    <li>Lorem ipsum dolor sit amet consectetur.</li>
+                </ul>
+            </div>
+            <div class="contenedor bordeado">
+                <h3>Explore repositories</h3>
+                <div>
+                    <i class="bi bi-person-circle">Lorem, ipsum dolor.</i>
+                    <p>Lorem ipsum dolor sit.</p>
+                </div>
+                <div>
+                    <i class="bi bi-person-circle">Lorem, ipsum dolor.</i>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                </div>
+                <div>
+                    <i class="bi bi-person-circle">Lorem, ipsum dolor.</i>
+                    <p>Lorem ipsum dolor, sit amet consectetur</p>
+                </div>
+            </div>
+        </aside>
     </div>
+    <footer><p>© 2024 GitHub, Inc.
+        Footer navigation
+        Terms
+        Privacy
+        Security
+        Status
+        Docs
+        Contact
+        Manage cookies
+        Do not share my personal information</p></footer>
 </body>
 
 </html>
