--- a/EntornoCliente/relacion3_Pennino_Matias/ejercicio5.html
+++ b/EntornoCliente/relacion3_Pennino_Matias/ejercicio5.html
@@ -11,16 +11,17 @@
             var radioBase = parseFloat(document.getElementById("base").value)
             var altura = parseFloat(document.getElementById("altura").value)
             var salida, area, volumen
-            if ((isNaN(radioBase) && isNaN(radioEsf)) || isNaN(altura)) {
+            var ceros = radioEsf == 0 || radioBase == 0 || altura == 0
+            if ((isNaN(radioBase) && isNaN(radioEsf)) || isNaN(altura) || ceros) {
                 salida = "No se puede calcular el area y volumen con los datos dados"
             } else {
                 if (!isNaN(altura)) {
                     if (!isNaN(radioBase)) {
-                        area = Math.PI * (Math.pow(radioBase, 2)+Math.pow(altura,2))
-                        volumen = ((Math.PI*altura)/6)*(3*Math.pow(radioBase,2)+Math.pow(altura,2))
-                    }else{
-                        area = 2*Math.PI*radioEsf*altura
-                        volumen = ((Math.PI*Math.pow(altura,2))/3)*(3*radioEsf-altura)
+                        area = Math.PI * (Math.pow(radioBase, 2) + Math.pow(altura, 2))
+                        volumen = ((Math.PI * altura) / 6) * (3 * Math.pow(radioBase, 2) + Math.pow(altura, 2))
+                    } else {
+                        area = 2 * Math.PI * radioEsf * altura
+                        volumen = ((Math.PI * Math.pow(altura, 2)) / 3) * (3 * radioEsf - altura)
                     }
                 }
                 salida = `El area del casquete es: ${area} y el volumen: ${volumen}`
@@ -35,6 +36,8 @@
     <input type="text" placeholder="radio de la esfera" id="esfera">
     <input type="text" placeholder="altura del casquete" id="altura">
     <button onclick="calcular()">Calcular area y volumen del casquete esferico</button>
+    <p>Se calculara utilizando el radio de la base si se proporciona, ignorando el radio de la esfera. Si no se ingresa
+        el radio de la base se utilizara el radio de la esfera. Si se ingresa un "0" en cualquier dato el programa fallara</p>
 </body>
 
 </html>
