--- a/EntornoCliente/tarea8_Pennino_Matias/index.html
+++ b/EntornoCliente/tarea8_Pennino_Matias/index.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="script.js"></script>
 </head>
 <body>
-    
+    <button onclick=cantidadElementos()>cantidad de elementos</button>
+    <button onclick=mostrar()>mostrar elementos</button>
+    <button onclick=mostrarInverso()>mostrar elementos de forma inversa</button>
+    <button onclick=alfabetico()>mostrar elementos alfabeticamente</button>
+    <button onclick=principio()>Añadir un elemento a la primera posicion</button>
+    <button onclick=final()>Añadir un elemento a la ultima posicion</button>
+    <button onclick=borrarPrimero()>Borrar el primer elemento</button>
+    <button onclick=borrarUltimo()>Borrar el ultimo elemento</button>
+    <button onclick=mostrarPosicion()>Mostrar elemento por posicion</button>
+    <button onclick=mostrarElemento()>Mostrar posicion de un elemento</button>
+    <button onclick=intervalo()>Mostrar elementos en un intervalo</button>
 </body>
 </html>
