--- a/EntornoCliente/relacion3_Pennino_Matias/ejercicio4.html
+++ b/EntornoCliente/relacion3_Pennino_Matias/ejercicio4.html
@@ -8,13 +8,14 @@
     <script>
         function diferencia() {
             var dia = document.getElementById("dia").value
-            var mes = document.getElementById("mes").value
+            var mes = document.getElementById("mes").value - 1
             var anio = document.getElementById("anio").value
             var fecha = new Date(anio, mes, dia)
             var hoy = new Date()
-            var dias, semanas, anios
-            var rango = dia <= 31 && dia >= 1 && mes <= 11 && mes >= 0
-            var invalido = isNaN(dia) || isNaN(mes) || isNaN(anio) || rango == false
+            var anios = 0
+            var dias, semanas, anioActual, anioFinal
+            var rango = dia <= 31 && dia >= 1 && mes <= 11 && mes >= 0 && anio >= 1970 && anio <= 9999
+            var invalido = isNaN(dia) || isNaN(mes) || isNaN(anio) || !rango
 
             if (!invalido) {
                 hoy.setHours(0)
@@ -22,20 +23,26 @@
                 hoy.setSeconds(0)
                 hoy.setMilliseconds(0)
 
+                anioActual = hoy.getFullYear()
+                anioFinal = fecha.getFullYear()
                 fecha = fecha.getTime()
                 hoy = hoy.getTime()
                 if (fecha > hoy) {
                     dias = parseInt((fecha - hoy) / (24 * 60 * 60 * 1000))
                     semanas = parseInt(dias / 7)
-                    anios = parseInt(dias / 365)
+                    if (dias > 364) {
+                    anios = anioFinal - anioActual
+                    }
                 } else {
                     dias = parseInt((hoy - fecha) / (24 * 60 * 60 * 1000))
                     semanas = parseInt(dias / 7)
-                    anios = parseInt(dias / 365)
+                    if (dias > 364) {
+                        anios = anioActual - anioFinal
+                    }
                 }
 
                 alert(`${dias} dias, ${semanas} semanas, ${anios} años`)
-            }else{
+            } else {
                 alert("error al ingresar datos")
             }
 
@@ -45,11 +52,11 @@
 
 <body>
     <label for="">Ingresa el dia</label>
-    <input type="text" id="dia">
+    <input type="text" id="dia" placeholder="[1-31]">
     <label for="">Ingresa el mes</label>
-    <input type="text" id="mes">
+    <input type="text" id="mes" placeholder="[1-12]">
     <label for="">Ingresa el año</label>
-    <input type="text" id="anio">
+    <input type="text" id="anio" placeholder="[1970-9999]">
     <button onclick=diferencia()>diferencia de fecha</button>
 </body>
 
