--- a/EntornoCliente/relacion3_Pennino_Matias/index.html
+++ b/EntornoCliente/relacion3_Pennino_Matias/index.html
@@ -7,13 +7,15 @@
     <style>
         body{
             display: flex;
-            justify-content: center;
+            justify-content: space-around;
             align-items: center;
             flex-direction: column;
+            height: 600px;
         }
 
         iframe{
             border: 10px solid black;
+            width: 100%;
         }
     </style>
     <script>
