--- a/DiseInter/tarea5/index.html
+++ b/DiseInter/tarea5/index.html
@@ -56,7 +56,7 @@
         </div>
     </header>
     <div id="contenidos">
-        <aside>
+        <aside id="izquierda">
             <div id="nuevos">
                 <p>Top repositories</p>
                 <button><i class="bi bi-bookmark"></i> New</button>
@@ -95,7 +95,7 @@
         </main>
         <aside id="derecha">
             <div class="contenedor">
-                <img src="img/banner.png" alt="">
+                <img src="img/banner.png" alt="...">
             </div>
             <div class="bordeado contenedor">
                 <h3>Latest changes</h3>
