--- a/DiseInter/tarea3_u2_Pennino_Matias/index.html
+++ b/DiseInter/tarea3_u2_Pennino_Matias/index.html
@@ -6,10 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <header>
+    <header id="encabezado">
         <img src="img/yo.jpg" alt="" id="perfil">
         <h1>MATIAS PENNINO</h1>
     </header>
@@ -26,15 +29,15 @@
                     <th>DESCRIPCION</th>
                 </tr>
                 <tr>
-                    <td>Arial</td>
+                    <td><a style="text-decoration: none;" href="#pie">Arial</a></td>
                     <td>Tipo de fuente actual que se puede utilizar en cualquier contexto informal</td>
                 </tr>
                 <tr>
-                    <td>Comic Sans</td>
+                    <td><a style="text-decoration: none;" href="#ejercicio4">Comic Neue</a></td>
                     <td>Tipo de fuente que imita a la de los comics, se puede utilizar para presentaciones en escuelas</td>
                 </tr>
                 <tr>
-                    <td>Times New Roman</td>
+                    <td><a style="text-decoration: none;" href="#encabezado">Times New Roman</a></td>
                     <td>Tipo de fuente antigua usada desde antes de que surgiera la informatica, se puede utilizar en paginas de diarios</td>
                 </tr>
             </table>
@@ -59,7 +62,7 @@
             </div>
         </div>
     </main>
-    <footer>
+    <footer id="pie">
         <p>Matias pennino 2ºDAW</p>
     </footer>
 </body>
