--- a/DiseInter/tarea4_u2_pennino_matias/index.html
+++ b/DiseInter/tarea4_u2_pennino_matias/index.html
@@ -7,12 +7,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="contenedor">
     <header id="enc"></header>
     <nav id="bot"></nav>
     <nav id="lat"></nav>
-    <section id="sup"></section>
-    <section id="inf"></section>
+    <section id="sup"><aside></aside></section>
+    <section id="inf"><aside></aside></section>
     <aside id="der"></aside>
     <footer id="fin"></footer>
+    </div>
 </body>
 </html>
