--- a/DiseInter/proyecto_matias_pennino/maqueta_flex/maqueta_flex.html
+++ b/DiseInter/proyecto_matias_pennino/maqueta_flex/maqueta_flex.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <header>
         <div id="subHead1">subzona 1</div>
-        <div id="subHead2"><h1 id="titulo">Redes y Software lo de Fabi</h1></div>
+        <div id="subHead2">
+            <h1 id="titulo">Redes y Software lo de Fabi</h1>
+        </div>
         <div id="subHead3">subzona 3</div>
     </header>
     <nav>
@@ -20,9 +27,17 @@
         <div id="subSect2">subzona 2</div>
     </main>
     <footer>
-        <div id="subFoo1">subzona 1</div>
+        <div id="subFoo1" style="color: #D4AF37;">
+            <ul>
+                <li>Diseño de interfaces web</li>
+                <li>2º DAW</li>
+            </ul>
+        </div>
         <div id="subFoo2">subzona 2</div>
-        <div id="subFoo3">subzona 3</div>
+        <div id="subFoo3">
+            <p>Matias Pennino</p>
+        </div>
     </footer>
 </body>
+
 </html>
