--- a/DiseInter/proyecto_matias_pennino/web/index.html
+++ b/DiseInter/proyecto_matias_pennino/web/index.html
@@ -39,34 +39,34 @@
     </nav>
     <main>
         <div id="subMain1">
-            <div id="productos">
-                <div><img src="" alt="">
-                    <p></p>
+            <div id="productos" class="contenedor" onmouseenter="enfoque('productos')" onmouseleave="desenfoque()">
+                <div><img src="../img/pc.png" alt="">
+                    <p class="descProducto">Pc armada y lista para jugar</p>
                 </div>
-                <div><img src="" alt="">
-                    <p></p>
+                <div><img src="../img/silla gamer.png" alt="">
+                    <p class="descProducto">Silla gamer muy comoda para jugar</p>
                 </div>
-                <div><img src="" alt="">
-                    <p></p>
+                <div><img src="../img/cargador.png" alt="">
+                    <p class="descProducto">Cargador de carga rapida</p>
                 </div>
-                <div><img src="" alt="">
-                    <p></p>
+                <div><img src="../img/pasta termica.png" alt="">
+                    <p class="descProducto">Pasta termica</p>
                 </div>
             </div>
-            <div id="servicios">
+            <div id="servicios" class="contenedor" onmouseenter="enfoque('servicios')" onmouseleave="desenfoque()">
                 <div></div>
                 <div></div>
                 <div></div>
                 <div></div>
             </div>
-            <div id="destacado">
+            <div id="destacado" class="contenedor" onmouseenter="enfoque('destacado')" onmouseleave="desenfoque()">
                 <h2></h2>
                 <img src="" alt="">
                 <p></p>
                 <br>
                 <p></p>
             </div>
-            <div id="empresas">
+            <div id="empresas" class="contenedor" onmouseenter="enfoque('empresas')" onmouseleave="desenfoque()">
                 <div><img src="" alt="">
                     <p class="nomEmpresa"></p>
                     <p></p>
@@ -116,5 +116,38 @@
         </div>
     </footer>
 </body>
+
+<script>
+    var descripcionesProducto = document.getElementsByClassName("descProducto")
+    var contenedores = document.getElementsByClassName('contenedor');
+    function enfoque(valor) {
+
+        for (var i = 0; i < contenedores.length; i++) {
+
+            contenedores[i].style.display = "none";
+
+        }
+
+        // document.getElementById(valor).style.transition = '.5s';
+        document.getElementById(valor).style.display = 'flex';
+        document.getElementById(valor).style.width = '100%';
+        document.getElementById(valor).style.height = '100%';
+        for (let i = 0; i < descripcionesProducto.length; i++) {
+            descripcionesProducto[i].style.display = "block"
+        }
+
+    }
+    function desenfoque() {
+        for (var i = 0; i < contenedores.length; i++) {
+            contenedores[i].style.display = 'flex';
+            contenedores[i].style.width = "50%";
+            contenedores[i].style.height = "50%";
+        }
+        for (let i = 0; i < descripcionesProducto.length; i++) {
+            descripcionesProducto[i].style.display = "none"
+        }
+
+    }
+</script>
 
 </html>
