--- a/DiseInter/proyecto_matias_pennino/web/index.html
+++ b/DiseInter/proyecto_matias_pennino/web/index.html
@@ -54,10 +54,33 @@
                 </div>
             </div>
             <div id="servicios" class="contenedor" onmouseenter="enfoque('servicios')" onmouseleave="desenfoque()">
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
+                <table>
+                    <tr>
+                        <th>Servicio</th>
+                        <th>Descripcion</th>
+                        <th>Valoracion</th>
+                    </tr>
+                    <tr>
+                        <td>Diseño de web</td>
+                        <td>Diseñamos una web segun tus necesidades</td>
+                        <td>10/10</td>
+                    </tr>
+                    <tr>
+                        <td>Instalacion de sistema operativo</td>
+                        <td>Instalamos windows, linux o mac</td>
+                        <td>7/10</td>
+                    </tr>
+                    <tr>
+                        <td>Formateo de pc</td>
+                        <td>Reiniciamos tu pc de fabrica</td>
+                        <td>7/10</td>
+                    </tr>
+                    <tr>
+                        <td>Limpieza de pc</td>
+                        <td>Realizamos una limpieza completa a tu pc</td>
+                        <td>8/10</td>
+                    </tr>
+                </table>
             </div>
             <div id="destacado" class="contenedor" onmouseenter="enfoque('destacado')" onmouseleave="desenfoque()">
                 <h2></h2>
