--- a/DiseInter/proyecto_matias_pennino/web/index.html
+++ b/DiseInter/proyecto_matias_pennino/web/index.html
@@ -83,40 +83,36 @@
                 </table>
             </div>
             <div id="destacado" class="contenedor" onmouseenter="enfoque('destacado')" onmouseleave="desenfoque()">
-                <h2></h2>
-                <img src="" alt="">
-                <p></p>
+                <h2 class="descProducto">Placa de vide Nvidia RTX 4090</h2>
+                <img src="../img/producto_destacado.jpg" alt="">
+                <p class="descProducto">Placa de video de nueva generacion, capas de resistir cualquier cantidad de trabajo</p>
                 <br>
-                <p></p>
+                <p class="descProducto"><strong>Precio de salida: </strong>€1200</p>
             </div>
             <div id="empresas" class="contenedor" onmouseenter="enfoque('empresas')" onmouseleave="desenfoque()">
-                <div><img src="" alt="">
-                    <p class="nomEmpresa"></p>
-                    <p></p>
+                <div><img src="../img/empresa1.png" alt="">
+                    <h2 class="descProducto">WeTech</h2>
+                    <ul class="descProducto">
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </div>
+                <div><img src="../img/empresa2.png" alt="">
+                    <h2 class="descProducto">MeTech</h2>
                     <ul>
                         <li></li>
                         <li></li>
                     </ul>
                 </div>
-                <div><img src="" alt="">
-                    <p class="nomEmpresa"></p>
-                    <p></p>
-                    <ul>
+                <div><img src="../img/empresa3.png" alt="">
+                    <h2 class="descProducto">Tetech</h2>
+                    <ul class="descProducto">
                         <li></li>
                         <li></li>
                     </ul>
                 </div>
-                <div><img src="" alt="">
-                    <p class="nomEmpresa"></p>
-                    <p></p>
-                    <ul>
-                        <li></li>
-                        <li></li>
-                    </ul>
-                </div>
-                <div><img src="" alt="">
-                    <p class="nomEmpresa"></p>
-                    <p></p>
+                <div><img src="../img/empresa4.png" alt="">
+                    <h2 class="descProducto">OeTech</h2>
                     <ul>
                         <li></li>
                         <li></li>
