--- a/DiseInter/proyecto_matias_pennino/web/index.html
+++ b/DiseInter/proyecto_matias_pennino/web/index.html
@@ -93,29 +93,29 @@
                 <div><img src="../img/empresa1.png" alt="">
                     <h2 class="descProducto">WeTech</h2>
                     <ul class="descProducto">
-                        <li></li>
-                        <li></li>
+                        <li>a</li>
+                        <li>a</li>
                     </ul>
                 </div>
                 <div><img src="../img/empresa2.png" alt="">
                     <h2 class="descProducto">MeTech</h2>
-                    <ul>
-                        <li></li>
-                        <li></li>
+                    <ul class="descProducto">
+                        <li>s</li>
+                        <li>d</li>
                     </ul>
                 </div>
                 <div><img src="../img/empresa3.png" alt="">
-                    <h2 class="descProducto">Tetech</h2>
+                    <h2 class="descProducto">TeTech</h2>
                     <ul class="descProducto">
-                        <li></li>
-                        <li></li>
+                        <li>a</li>
+                        <li>a</li>
                     </ul>
                 </div>
                 <div><img src="../img/empresa4.png" alt="">
                     <h2 class="descProducto">OeTech</h2>
-                    <ul>
-                        <li></li>
-                        <li></li>
+                    <ul class="descProducto">
+                        <li>a</li>
+                        <li>a</li>
                     </ul>
                 </div>
             </div>
