--- a/EntornoCliente/relacion_4_Pennino_Matias/index.html
+++ b/EntornoCliente/relacion_4_Pennino_Matias/index.html
@@ -1,16 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        table{
+            border-collapse: collapse;
+        }
+        table, td, th{
+            border: 1px solid black;
+        }
+    </style>
 </head>
+
 <body>
-    
-    <script type="module">
-         import Ciudadano from "/ciudadano.js";
-        let yo = new Ciudadano("matias", "USA", 22)
-        console.log(yo)
+    <div id="contenedor">
+
+    </div>
+    <script type="module" src="script.js">
     </script>
 </body>
+
 </html>
