--- a/EntornoCliente/examen_Pennino_Matias/index.html
+++ b/EntornoCliente/examen_Pennino_Matias/index.html
@@ -1,26 +1,20 @@
 <!DOCTYPE html>
-<html lang="es">
-
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        table{
-            border-collapse: collapse;
+        img{
+            width: 50px;
         }
         table, td, th{
-            border: 1px solid black;
+            border: 1px solid black
         }
     </style>
 </head>
-
 <body>
-    <div id="contenedor">
-
-    </div>
     <script type="module" src="script.js">
     </script>
 </body>
-
 </html>
