--- a/EntornoCliente/formularios/ej7.html
+++ b/EntornoCliente/formularios/ej7.html
@@ -15,7 +15,7 @@
             <option value="OU">Ourense</option>
             <option value="PO">Pontevedra</option>
         </select>
-        <button>Consultar informacion de la opcion</button>
+        <button type="button">Consultar informacion de la opcion</button>
     </form>
     <div id="informacion"></div>
     <script>
