--- a/DiseInter/tarea1_unidad3/vistas/hogares.html
+++ b/DiseInter/tarea1_unidad3/vistas/hogares.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src=""></script>
+    <link rel="stylesheet" href="../layout.css">
 </head>
 <body>
-    
+    <main>
+        <p>Adopta un gato</p>
+    </main>
+    <script src="../cargar_menu.js"></script>    
 </body>
 </html>
