--- a/DiseInter/tarea1_unidad3/vistas/hogares.html
+++ b/DiseInter/tarea1_unidad3/vistas/hogares.html
@@ -1,15 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../layout.css">
+    <link rel="stylesheet" href="hogares.css">
 </head>
+
 <body>
+    <script src="../cargar_menu.js"></script>
     <main>
-        <p>Adopta un gato</p>
+        <div>
+            <p>Si no puedes cuidar a tu gato, nuestro refugio está aquí para ayudar. Nunca lo abandones; tráelo a
+                nosotros para que reciba atención, amor y una segunda oportunidad en un hogar adecuado. Entendemos que a
+                veces
+                las circunstancias cambian, y lo mejor para tu gato es encontrar un lugar seguro donde puedan cuidarlo
+                como
+                merece. Con tu decisión responsable, podremos brindarle la oportunidad de una nueva vida llena de
+                cariño.
+            </p>
+            <p>
+                Antes de tomar la difícil decisión de dejar a tu gato, reflexiona sobre todas las opciones. Habla con
+                familiares o amigos que puedan ayudarte temporalmente o ajusta tus recursos si es posible. Si no
+                encuentras otra solución, nuestro refugio está aquí para recibirlo con cariño. Tomar una decisión
+                responsable garantiza lo mejor para tu gato.
+            </p>
+        </div>
     </main>
-    <script src="../cargar_menu.js"></script>    
+    <script src="hogares.js"></script>
 </body>
+
 </html>
