--- a/DiseInter/Pennino_Matias_Tarea_1_U3/adopta.html
+++ b/DiseInter/Pennino_Matias_Tarea_1_U3/adopta.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../layout.css">
-    <link rel="stylesheet" href="adopta.css">
+    <link rel="stylesheet" href="estilos/layout.css">
+    <link rel="stylesheet" href="estilos/adopta.css">
 </head>
 
 <body>
-    <script src="../cargar_menu.js"></script>
+    <script src="scripts/cargar_menu.js"></script>
     <main>
         <div>
             <p>Adoptar un gato de nuestro refugio significa darle una segunda oportunidad a un amigo fiel. Cada gato ha
@@ -26,7 +26,7 @@
                 cambia su vida, también llenará la tuya de felicidad y compañía.</p>
         </div>
     </main>
-    <script src="adopta.js"></script>
+    <script src="scripts/adopta.js"></script>
 </body>
 
 </html>
