--- a/DiseInter/Pennino_Matias_Tarea_1_U3/hogares.html
+++ b/DiseInter/Pennino_Matias_Tarea_1_U3/hogares.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../layout.css">
-    <link rel="stylesheet" href="hogares.css">
+    <link rel="stylesheet" href="estilos/layout.css">
+    <link rel="stylesheet" href="estilos/hogares.css">
 </head>
 
 <body>
-    <script src="../cargar_menu.js"></script>
+    <script src="scripts/cargar_menu.js"></script>
     <main>
         <div>
             <p>Si no puedes cuidar a tu gato, nuestro refugio está aquí para ayudar. Nunca lo abandones; tráelo a
@@ -29,7 +29,7 @@
             </p>
         </div>
     </main>
-    <script src="hogares.js"></script>
+    <script src="scripts/hogares.js"></script>
 </body>
 
 </html>
