--- a/DiseInter/Pennino_Matias_Tarea_1_U3/inicio.html
+++ b/DiseInter/Pennino_Matias_Tarea_1_U3/inicio.html
@@ -5,15 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gatunos</title>
-    <link rel="stylesheet" href="../layout.css">
-    <link rel="stylesheet" href="inicio.css">
+    <link rel="stylesheet" href="estilos/layout.css">
+    <link rel="stylesheet" href="estilos/inicio.css">
 </head>
 
 <body>
-    <script src="../cargar_menu.js"></script>
+    <script src="scripts/cargar_menu.js"></script>
     <main>
         <section id="bueno">
-            <h3>El gato de la semana</h3>
+            <h3>El gato bueno de la semana</h3>
             <img src="../img/gato_bueno.jpg" alt="">
         </section>
         <section id="malo">
@@ -40,7 +40,7 @@
             </form>
         </section>
     </main>
-    <script src="inicio.js"></script>
+    <script src="scripts/inicio.js"></script>
 </body>
 
 </html>
