--- a/DiseInter/Pennino_Matias_Tarea_1_U3/inicio.html
+++ b/DiseInter/Pennino_Matias_Tarea_1_U3/inicio.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -14,15 +14,15 @@
     <main>
         <section id="bueno">
             <h3>El gato bueno de la semana</h3>
-            <img src="../img/gato_bueno.jpg" alt="">
+            <img src="img/gato_bueno.jpg" alt="">
         </section>
         <section id="malo">
             <h3>El gato malo de la semana</h3>
-            <img src="../img/gato_malo.jpg" alt="">
+            <img src="img/gato_malo.jpg" alt="">
         </section>
         <section id="postre">
             <h3>El premio que los gatos adoran</h3>
-            <img src="../img/postre.png" alt="">
+            <img src="img/postre.png" alt="">
         </section>
         <section id="comentarios">
             <h3>Dejanos sugerencias</h3>
