--- a/EntornoCliente/tarea_formularios_Pennino_Matias/index.html
+++ b/EntornoCliente/tarea_formularios_Pennino_Matias/index.html
@@ -1,12 +1,43 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            height: 100vh;
+            background-color: rgb(9, 68, 24);
+        }
+
+        h1{
+            color: rgb(68, 123, 224);
+            height: 20%;
+        }
+
+        a {
+            text-decoration: none;
+            color: whitesmoke;
+            transition: .5s;
+        }
+
+        a:hover {
+            color: rgb(68, 123, 224);
+            transition: .5s;
+            font-size: x-large;
+        }
+    </style>
 </head>
+
 <body>
+    <h1>Los 39 escalones</h1>
     <a href="admision.html">Envia tu solicitud</a>
     <a href="plan.html">Crea un nuevo plan</a>
 </body>
+
 </html>
