--- a/EntornoCliente/tarea_formularios_Pennino_Matias/admision.html
+++ b/EntornoCliente/tarea_formularios_Pennino_Matias/admision.html
@@ -1,39 +1,54 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
     <style>
-        body{
+        body {
             display: flex;
             justify-content: center;
             align-items: center;
             flex-direction: column;
+            height: 100vh;
+            background-color: rgb(9, 68, 24);
         }
-        form{
+
+        form {
+            background-color: rgb(67, 194, 95);
+            height: 40%;
             width: 60%;
+            border-radius: 10px;
         }
-        fieldset{
-            gap: 10px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-wrap: wrap;
+
+        a, p, li{
+            text-decoration: none;
+            color: whitesmoke;
+            transition: .5s;
         }
-        label, input, select, button{
-            width: 40%;
+
+        a:hover {
+            color: rgb(68, 123, 224);
+            transition: .5s;
         }
     </style>
 </head>
+
 <body>
-    <form action="">
-        <fieldset>
-            <legend>Solicitud de admision al congreso</legend>
-            <label>Nombre</label><input type="text" id="nombre">
-            <label>Contraseña</label><input type="password" id="clave">
-            <label>Nacionalidad</label>
-            <select id="nacionalidad">
+    <form class="row g-3">
+        <div class="col-md-6">
+            <label class="form-label">Nombre</label>
+            <input type="text" id="nombre" class="form-control">
+        </div>
+        <div class="col-md-6">
+            <label class="form-label">Nacionalidad</label>
+            <select id="nacionalidad" class="form-control">
                 <option value="0">Elija un pais</option>
                 <option value="argentino">Argentina</option>
                 <option value="italiano">Italia</option>
@@ -41,12 +56,32 @@
                 <option value="uruguayo">Uruguay</option>
                 <option value="aleman">Alemania</option>
             </select>
-            <button id="enviar">Enviar solicitud</button>
-            <button type="reset">Borrar datos</button>
-        </fieldset>
-        <div id="salida"></div>
+        </div>
+        <div class="col-12">
+            <label class="form-label">Contraseña</label>
+            <input type="password" id="clave" class="form-control">
+        </div>
+        <div class="col-12">
+            <label class="form-label">Repetir contraseña</label>
+            <svg id="mostrarClave" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                class="bi bi-eye" viewBox="0 0 16 16">
+                <path
+                    d="M16 8s-3-5.5-8-5.5S0 8 0 8s3 5.5 8 5.5S16 8 16 8M1.173 8a13 13 0 0 1 1.66-2.043C4.12 4.668 5.88 3.5 8 3.5s3.879 1.168 5.168 2.457A13 13 0 0 1 14.828 8q-.086.13-.195.288c-.335.48-.83 1.12-1.465 1.755C11.879 11.332 10.119 12.5 8 12.5s-3.879-1.168-5.168-2.457A13 13 0 0 1 1.172 8z" />
+                <path d="M8 5.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5M4.5 8a3.5 3.5 0 1 1 7 0 3.5 3.5 0 0 1-7 0" />
+            </svg>
+            <input type="password" id="repetirClave" class="form-control">
+
+        </div>
+        <div class="col-6">
+            <button type="submit" class="btn btn-primary" id="enviar">Enviar solicitud</button>
+        </div>
+        <div class="col-6">
+            <button type="reset" class="btn btn-primary">Borrar datos</button>
+        </div>
     </form>
+    <div id="salida"></div>
     <a href="index.html">Volver</a>
     <script src="scripts/admision.js"></script>
 </body>
+
 </html>
