--- a/EntornoCliente/tarea_formularios_Pennino_Matias/plan.html
+++ b/EntornoCliente/tarea_formularios_Pennino_Matias/plan.html
@@ -5,57 +5,144 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
     <style>
         body {
             display: flex;
             justify-content: center;
             align-items: center;
             flex-direction: column;
+            height: 100vh;
+            background-color: rgb(9, 68, 24);
         }
 
         form {
+            background-color: rgb(67, 194, 95);
+            height: 55%;
             width: 60%;
+            border-radius: 10px;
+            padding: 15px;
         }
 
-        fieldset {
-            gap: 10px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-wrap: wrap;
+        a,
+        p,
+        li {
+            text-decoration: none;
+            color: whitesmoke;
+            transition: .5s;
         }
 
-        #tipos{
-            width: 80%;
-            display: flex;
-            justify-content: center;
-        }
-
-        label,
-        input[type=text],
-        select,
-        button {
-            width: 40%;
+        a:hover {
+            color: rgb(68, 123, 224);
+            transition: .5s;
         }
     </style>
 </head>
 
 <body>
-    <form action="">
-        <fieldset>
-            <legend>Solicitud de admision al congreso</legend>
-            <label>Nombre del plan</label><input type="text" id="nombre">
-            <label>Codigo</label><input type="text" id="clave">
-            <label>Tipo de plan:</label>
-            <div id="tipos">
-                <label>Operaciones en campo</label>
+    <form id="formulario">
+        <div class="row mb-3">
+            <label class="col-sm-3 col-form-label">Nombre del plan</label>
+            <div class="col-sm-8">
+                <input type="text" class="form-control" required id="nombre">
             </div>
-            <button id="enviar">Enviar solicitud</button>
-            <button type="reset">Borrar datos</button>
+        </div>
+        <div class="row mb-3">
+            <label class="col-sm-3 col-form-label">Codigo</label>
+            <div class="col-sm-8">
+                <input type="text" class="form-control" required pattern="^[a-zA-ZÑñçÇ]\d{3,7}$">
+            </div>
+        </div>
+        <fieldset class="row mb-3">
+            <legend class="col-form-label col-sm-3 pt-0">Tipo de plan</legend>
+            <div class="col-sm-9">
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="tipo" value="Operaciones en campo" checked>
+                    <label class="form-check-label">
+                        Operaciones en campo
+                    </label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="tipo" value="Manejo de recursos financieros">
+                    <label class="form-check-label">
+                        Manejo de recursos financieros
+                    </label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="tipo" value="Desarrollo de tecnologia">
+                    <label class="form-check-label">
+                        Desarrollo de tecnologia
+                    </label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="tipo" value="Lucha de poder interno">
+                    <label class="form-check-label">
+                        Lucha de poder interno
+                    </label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="tipo" value="Operaciones de rescate">
+                    <label class="form-check-label">
+                        Operaciones de rescate
+                    </label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="tipo" value="Cifrado y descifrado">
+                    <label class="form-check-label">
+                        Cifrado y descifrado
+                    </label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="tipo" value="Operaciones encubiertas">
+                    <label class="form-check-label">
+                        Operaciones encubiertas
+                    </label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="tipo" value="Contrainteligencia">
+                    <label class="form-check-label">
+                        Contrainteligencia
+                    </label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="tipo" value="Desinformacion estrategica">
+                    <label class="form-check-label">
+                        Desinformacion estrategica
+                    </label>
+                </div>
+            </div>
         </fieldset>
-        <div id="salida"></div>
+        <div class="row mb-3">
+            <label class="form-label col-sm-3">Pais objetivo</label>
+            <div class="col-sm-8">
+                <input class="form-control" list="paises" id="listaPaises">
+            </div>
+            <datalist id="paises">
+                <option value="argentina">
+                <option value="españa">
+                <option value="italia">
+                <option value="uruguay">
+                <option value="australia">
+            </datalist>
+        </div>
+        <div class="row mb-3">
+            <div class="col-sm-6">
+                <button type="submit" class="btn btn-primary" id="enviar">Enviar plan</button>
+            </div>
+            <div class="col-sm-6">
+                <button type="reset" class="btn btn-primary">Borrar datos</button>
+            </div>
+        </div>
+
     </form>
+    <div id="salida"></div>
+    <div id="visitas"></div>
     <a href="index.html">Volver</a>
+    <script src="scripts/plan.js"></script>
 </body>
 
 </html>
