--- a/EntornoCliente/tarea_formularios_Pennino_Matias/plan.html
+++ b/EntornoCliente/tarea_formularios_Pennino_Matias/plan.html
@@ -54,6 +54,7 @@
         <div class="row mb-3">
             <label class="col-sm-3 col-form-label">Codigo</label>
             <div class="col-sm-8">
+                <!--Se comprueba que el codigo sea de una letra y 3 a 7 numeros-->
                 <input type="text" class="form-control" required pattern="^[a-zA-ZÑñçÇ]\d{3,7}$">
             </div>
         </div>
