--- a/DiseInter/tarea_bootstrap/contacto.html
+++ b/DiseInter/tarea_bootstrap/contacto.html
@@ -1,13 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="contacto.css">
 </head>
+
 <body>
-    
+    <form action="https://www.google.es/">
+        <div class="row">
+            <div class="mb-3 col-6">
+                <label for="nombre" class="form-label">Nombre</label>
+                <input type="text" class="form-control" id="nombre">
+            </div>
+            <div class="mb-3 col-6">
+                <label for="apellido" class="form-label">Apellido</label>
+                <input type="text" class="form-control" id="apellido">
+            </div>
+            <div class="mb-3">
+                <label for="email" class="form-label">Email</label>
+                <input type="email" class="form-control" id="email">
+            </div>
+        </div>
+        <div class="mb-3">
+            <label for="mensaje" class="form-label">Mensaje</label>
+            <textarea class="form-control" id="mensaje" rows="3"></textarea>
+        </div>
+        <button class="btn btn-primary" id="enviar">Enviar datos</button>
+    </form>
+    <div id="resultado"></div>
+    <a href="index.html"><button type="button" class="btn btn-link" id="volver">Volver</button></a>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        const enviar = document.getElementById("enviar");
+        const nombre = document.getElementById("nombre");
+        const apellido = document.getElementById("apellido");
+        const email = document.getElementById("email");
+        const mensaje = document.getElementById("mensaje");
+        const resultado = document.getElementById("resultado");
+
+        enviar.addEventListener("click", (event) => {
+            event.preventDefault();
+            let invalido = false;
+            let mensajeSalida;
+            if (!new RegExp(/^[A-Za-z]+(\s[A-Za-z]+)*$/).test(nombre.value)) {
+                invalido = true;
+            }
+            if (!new RegExp(/^[A-Za-z]+(\s[A-Za-z]+)*$/).test(apellido.value)) {
+                invalido = true;
+            }
+            if (!new RegExp(/^[A-Za-z]+@[a-z]+\.[a-z]{2,3}$/).test(email.value)) {
+                invalido = true;
+            }
+            if (mensaje.value == null || mensaje.value.trim() == "") {
+                invalido = true;
+            }
+
+            mensajeSalida = invalido ? "Los datos porporcionados no son validos" : "Datos enviados correctamente";
+            resultado.innerHTML = `<p>${mensajeSalida}</p>`;
+        });
+    </script>
 </body>
+
 </html>
